plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.chatgpt.client'
version = '1.0.0'
sourceCompatibility = '21'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot WebFlux for reactive web
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Jakarta EE (reduced - only what's needed for validation)
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'

    // R2DBC Database drivers
    implementation 'io.r2dbc:r2dbc-h2'
    implementation("org.postgresql:r2dbc-postgresql:1.0.7.RELEASE")
    implementation 'com.h2database:h2' // Still needed for H2 console

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // OpenAI Java Client
    implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'

    // JSON processing
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'

    // File handling
    implementation 'org.apache.commons:commons-lang3:3.13.0'
    implementation 'commons-io:commons-io:2.11.0'

    // Markdown processing
    implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webflux' // for WebTestClient
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:r2dbc'
    testImplementation 'org.testcontainers:postgresql' // if using PostgreSQL
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'

    // R2DBC test support
    testImplementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
    testImplementation 'io.r2dbc:r2dbc-h2' // for in-memory testing

    // AssertJ for better assertions
    testImplementation 'org.assertj:assertj-core'

}

tasks.named('test') {
    useJUnitPlatform()
}